run sensitivity test

--- a/analysis/config_parameterization_local.Rmd
+++ b/analysis/config_parameterization_local.Rmd
@@ -76,13 +76,13 @@ MLR_predictors <- c(
 params_local <-
   lst(
     # ID of current sensitivity run
-    Version_ID = "v_XXX",
+    Version_ID = "v_101",
     # f flags accepted for GLODAP data
     flag_f = c(2),
     # qc flags accepted for GLODAP data
     flag_qc = c(1),
     # Should A16 cruise from 2013/14 be included in middle era (y/n)
-    A16_GO-SHIP = "y",
+    A16_GO_SHIP = "y",
     # Shallowest depth for data to be included in MLR fitting
     depth_min = 150,
     # Shallowest water depth for data to be included in MLR fitting
