--- a/analysis/eMLR_GLODAPv2_2020_subsetting.Rmd
+++ b/analysis/eMLR_GLODAPv2_2020_subsetting.Rmd
@@ -649,7 +649,7 @@ GLODAP <- GLODAP %>%
 
 For harmonization with Gruber et al. (2019), cruises 1041 (A16N) and 1042 (A16S) were grouped into the `r sort(unique(GLODAP$era))[2]` era despite taking place in 2013/14:
 
-- `r params_local$A16_GO-SHIP`
+- `r params_local$A16_GO_SHIP` (y = applied, n = not applied)
 
 ```{r GLODAP_Atl_cruises_2013_2014_map}
 
@@ -670,10 +670,12 @@ rm(GLODAP_cruises)
 
 ```{r switch_eras_manually}
 
-if (params_local$A16_GO-SHIP == "y") {
+if (params_local$A16_GO_SHIP == "y") {
+  
 GLODAP <- GLODAP %>%
   mutate(era = if_else(cruise %in% c(1041, 1042),
                        sort(unique(GLODAP$era))[2], era))
+
 }
 
 ```
@@ -895,7 +897,6 @@ GLODAP_tco2_grid <- GLODAP %>%
   count(lat, lon)
 
 map +
-  # geom_raster(data = GLODAP_tco2_grid, aes(lon, lat), fill = "grey80") +
   geom_bin2d(data = GLODAP,
              aes(lon, lat),
              binwidth = c(1,1)) +
